민간 자격증 데이터베이스에 넣기 위한 작업들 및 준비(일단 문제는 없지만 나중에 한 번 ㄱㄱ)